--- a/index.html
+++ b/index.html
@@ -5,6 +5,41 @@
 
 <h1>Carmen Wirtz Biography</h1>
 <p>This is a paragraph.</p>
+<!DOCTYPE html>
+<html>
+<style>
+table, th, td {
+  border:1px solid black;
+}
+</style>
+<body>
 
+<h2>A basic HTML table</h2>
+
+<table style="width:100%">
+  <tr>
+    <th>Colegios</th>
+    <th>Años donde estudio</th>
+    <th>Universidades donde estudio</th>
+  </tr>
+  <tr>
+    <td>Preescolar las Abejitas </td>
+    <td>1981-1983</td>
+    <td>Universidad de Chicago</td>
+  </tr>
+  <tr>
+    <td>Colegio Americano</td>
+    <td>1984-1996</td>
+    <td> Emerson College UK</td>
+  </tr>
+</table>
+
+<p>To undestand the example better, we have added borders to the table.</p>
+
+</body>
+</html>
+
+
+  
 </body>
 </html>
