--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html>
 <title>Santiago Wirtz</title>
-<body>
+<head>
 
-<h1>Carmen Wirtz Biography</h1>
-<p>This is a paragraph.</p>
-<!DOCTYPE html>
-<html>
 <style>
-table, th, td {
-  border:1px solid black;
-}
+<h1>Carmen Wirtz Biography</h1>
 </style>
+  </head>
 <body>
 
 <h2>A basic HTML table</h2>
+  <h1>Carmen Wirtz Biography</h1>
 
 <table style="width:100%">
   <tr>
