--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html>
 <title>Santiago Wirtz</title>
 <head>
-
 <style>
+body{background-color:green}
+h1
+{text-allign:center;}
+h2
+{text-allign:center;}
+ th, td {
+  border: 1px solid black;
+   border-radius: 10px;
+}
+td {background-color:red}
 <h1>Carmen Wirtz Biography</h1>
 </style>
   </head>
@@ -12,7 +21,7 @@
 <h2>A basic HTML table</h2>
   <h1>Carmen Wirtz Biography</h1>
 
-<table style="width:100%">
+<table style="width:90%">
   <tr>
     <th>Colegios</th>
     <th>Años donde estudio</th>
@@ -29,11 +38,22 @@
     <td> Emerson College UK</td>
   </tr>
 </table>
-
-<p>To undestand the example better, we have added borders to the table.</p>
+<p style="background-color:#44F9E2";> Bebeidas que tomas Ms. Carmen</p>
+<h1> Bebeidas que tomas Ms. Carmen</h1>
+<ol>
+  <li>Café</li>
+  <li>Té</li>
+  <li>Gin</li>
+  <li>Agua Pura</li>
+  <li>Fresca</li>
+</ol>
+<p style="background-color:yellow;color:#4465F9; font-size:18px" >Parrafos sobre Ms. Carmen.</p>
+<p> ¿Qué lee? A mi mamá le gusta leer cosas que no den miedo o le cause un molestar en el alma.<br> A mi mamá tambien le gustan los libros de infantiles que me parece que es muy interesante <br> Y su libro favorito es el de La Casa de los Espíritus de Isabel Allende</p>
 
 </body>
 </html>
+
+
 
 
   
