--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ td {background-color:red}
 <p style="background-color:#44F9E2";> Bebeidas que tomas Ms. Carmen</p>
 <h1> Bebeidas que tomas Ms. Carmen</h1>
 <ol>
-  <li>Café</li>
+  <li>Chocalate Caliente</li>
   <li>Té</li>
   <li>Gin</li>
   <li>Agua Pura</li>
@@ -49,10 +49,10 @@ td {background-color:red}
 </ol>
 <p style="background-color:yellow;color:#4465F9; font-size:18px" >Parrafos sobre Ms. Carmen.</p>
 <p> ¿Qué lee? A mi mamá le gusta leer cosas que no den miedo o le cause un molestar en el alma.<br> A mi mamá tambien le gustan los libros de infantiles que me parece que es muy interesante <br> Y su libro favorito es el de La Casa de los Espíritus de Isabel Allende</p>
-
+<p> ¿Quién le inspira actualmente y por qué? Le inspira la juventud porque reconzo en ellos sus capacidades y ganas de salir adelante.<br> Verlos le dan esperanza sobre el futuro y las posibiladades que puedan crear.<br> Esta segura que con ellos al frente el futuro sera brillante.</p>
+<p> Es tan común encontrarla escuchando música clásica como una canción de Ozuna. <br> Le gusta una gran variedad de generos musicales y disfruta escuchar música en vivo. <br> Cuando era pequeña aprendio a tocar el piano.</p> 
 </body>
 </html>
-
 
 
 
