--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ td {background-color:red}
 <table style="width:90%">
   <tr>
     <th>Colegios</th>
-    <th>Años donde estudio</th>
-    <th>Universidades donde estudio</th>
+    <th>Años en los que asistió</th>
+    <th>Universidades</th>
   </tr>
   <tr>
     <td>Preescolar las Abejitas </td>
@@ -38,23 +38,18 @@ td {background-color:red}
     <td> Emerson College UK</td>
   </tr>
 </table>
-<p style="background-color:#44F9E2";> Bebeidas que tomas Ms. Carmen</p>
-<h1> Bebeidas que tomas Ms. Carmen</h1>
+<p style="background-color:#44F9E2";> Bebidas que tomas Ms.Carmen</p>
+<h1> Bebidas que toma Ms.Carmen</h1>
 <ol>
-  <li>Chocalate Caliente</li>
-  <li>Té</li>
-  <li>Gin</li>
+  <li>Chocolate Caliente</li>
+  <li>Té herbal</li>
+  <li>Gin and tonic</li>
   <li>Agua Pura</li>
   <li>Fresca</li>
 </ol>
-<p style="background-color:yellow;color:#4465F9; font-size:18px" >Parrafos sobre Ms. Carmen.</p>
-<p> ¿Qué lee? A mi mamá le gusta leer cosas que no den miedo o le cause un molestar en el alma.<br> A mi mamá tambien le gustan los libros de infantiles que me parece que es muy interesante <br> Y su libro favorito es el de La Casa de los Espíritus de Isabel Allende</p>
-<p> ¿Quién le inspira actualmente y por qué? Le inspira la juventud porque reconzo en ellos sus capacidades y ganas de salir adelante.<br> Verlos le dan esperanza sobre el futuro y las posibiladades que puedan crear.<br> Esta segura que con ellos al frente el futuro sera brillante.</p>
-<p> Es tan común encontrarla escuchando música clásica como una canción de Ozuna. <br> Le gusta una gran variedad de generos musicales y disfruta escuchar música en vivo. <br> Cuando era pequeña aprendio a tocar el piano.</p> 
+<p style="background-color:yellow;color:#4465F9; font-size:18px" >Párrafos sobre Ms.Carmen</p>
+<p> ¿Qué lee? A mi mamá le gusta leer cosas que no den miedo o le cause un molestar en el alma.<br> A mi mamá también le gustan los libros infantiles que me parece que es muy interesante. <br> Su libro favorito es La Casa de los Espíritus de Isabel Allende.</p>
+<p> ¿Quién le inspira actualmente y por qué? Le inspira la juventud porque reconoce en ellos sus capacidades y ganas de salir adelante.<br> Verlos le da esperanza sobre el futuro y las posibiladades que puedan crear.<br> Está segura que con ellos al frente el futuro será brillante.</p>
+<p> Música Es tan común encontrarla escuchando música clásica como también una canción de Ozuna. <br> Le gustan una gran variedad de géneros musicales y disfruta escuchar música en vivo. <br> Cuando era pequeña aprendió a tocar el piano. Ya adulto, inició a aprender a tocar la batería y su sueño es tocar el cello.</p> 
 </body>
 </html>
-
-
-
-  
-
