--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ td {background-color:red}
   </head>
 <body>
 
-<h2>A basic HTML table</h2>
-  <h1>Carmen Wirtz Biography</h1>
+<h2>Conociendo a</h2>
+  <h1>Carmen Wirtz </h1>
 
 <table style="width:90%">
   <tr>
