--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ td {background-color:red}
   <li>Fresca</li>
 </ol>
 <p style="background-color:yellow;color:#4465F9; font-size:18px" >Párrafos sobre Ms.Carmen</p>
-<p> ¿Qué lee? A mi mamá le gusta leer cosas que no den miedo o le cause un molestar en el alma.<br> A mi mamá también le gustan los libros infantiles que me parece que es muy interesante. <br> Su libro favorito es La Casa de los Espíritus de Isabel Allende.</p>
-<p> ¿Quién le inspira actualmente y por qué? Le inspira la juventud porque reconoce en ellos sus capacidades y ganas de salir adelante.<br> Verlos le da esperanza sobre el futuro y las posibiladades que puedan crear.<br> Está segura que con ellos al frente el futuro será brillante.</p>
-<p> Música Es tan común encontrarla escuchando música clásica como también una canción de Ozuna. <br> Le gustan una gran variedad de géneros musicales y disfruta escuchar música en vivo. <br> Cuando era pequeña aprendió a tocar el piano. Ya adulto, inició a aprender a tocar la batería y su sueño es tocar el cello.</p> 
+<h1> ¿Qué lee?</h1> <p>A mi mamá le gusta leer cosas que no den miedo o le cause un molestar en el alma.<br> A mi mamá también le gustan los libros infantiles que me parece que es muy interesante. <br> Su libro favorito es La Casa de los Espíritus de Isabel Allende.</p>
+<h2> ¿Quién le inspira actualmente y por qué?</h2> <p>Le inspira la juventud porque reconoce en ellos sus capacidades y ganas de salir adelante.<br> Verlos le da esperanza sobre el futuro y las posibiladades que puedan crear.<br> Está segura que con ellos al frente el futuro será brillante.</p>
+<h2> Música</h2> <p>Es tan común encontrarla escuchando música clásica como también una canción de Ozuna. <br> Le gustan una gran variedad de géneros musicales y disfruta escuchar música en vivo. <br> Cuando era pequeña aprendió a tocar el piano. Ya adulto, inició a aprender a tocar la batería y su sueño es tocar el cello.</p> 
 </body>
 </html>
