--- a/index.html
+++ b/index.html
@@ -38,6 +38,28 @@ td {background-color:red}
     <td> Emerson College UK</td>
   </tr>
 </table>
+
+<table style="width:90%">
+  <tr>
+    <th>Lugares donde ha vivido</th>
+    <th>Años en los que vivio en la ciudad</th>
+    <th>Años siendo residentes</th>
+    <th>Total años vividos ahí</th>
+  </tr>
+  <tr>
+    <td>Ciudad de Guatemala  </td>
+    <td>1978-1996</td>
+    <td>18 </td>
+    <td>18 <td>
+     <tr>
+    <td>Ciudad de Chicago  </td>
+    <td>1996-2000</td>
+    <td>4 </td>
+    <td>4 <td>
+  
+  </tr>
+  
+</table>
 <p style="background-color:#44F9E2";> Bebidas que tomas Ms.Carmen</p>
 <h1> Bebidas que toma Ms.Carmen</h1>
 <ol>
