--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@ td {background-color:red}
 <h1> ¿Qué lee?</h1> <p>A mi mamá le gusta leer cosas que no den miedo o le cause un molestar en el alma.<br> A mi mamá también le gustan los libros infantiles que me parece que es muy interesante. <br> Su libro favorito es La Casa de los Espíritus de Isabel Allende.</p>
 <h2> ¿Quién le inspira actualmente y por qué?</h2> <p>Le inspira la juventud porque reconoce en ellos sus capacidades y ganas de salir adelante.<br> Verlos le da esperanza sobre el futuro y las posibiladades que puedan crear.<br> Está segura que con ellos al frente el futuro será brillante.</p>
 <h2> Música</h2> <p>Es tan común encontrarla escuchando música clásica como también una canción de Ozuna. <br> Le gustan una gran variedad de géneros musicales y disfruta escuchar música en vivo. <br> Cuando era pequeña aprendió a tocar el piano. Ya adulto, inició a aprender a tocar la batería y su sueño es tocar el cello.</p> 
-<img src="https://www.google.com/search?q=carmen+wirtz&rlz=1CAPPDO_enGT884&sxsrf=APq-WBufw7lY7xvV8_N6X-kyuiX-nZbiXw:1646928481083&tbm=isch&source=iu&ictx=1&vet=1&fir=_6aSyNlplVsgXM%252CXFK_IygLL1flLM%252C_%253Bxa5BPV-BlrpMqM%252Cr9a2yY4pPUyreM%252C_%253BRNy8TfcbMNc-XM%252Cfx1_LZx2O2imLM%252C_%253BQAN7l5mb7KRPqM%252Cpt8ob8rkK41u2M%252C_%253BmjU0y658R5xGHM%252CVOnTX-AG1SOzkM%252C_%253BzGtqoxjkmHwnUM%252CTdDx_007psNW1M%252C_%253BSGqb3yflXZeoxM%252CXFK_IygLL1flLM%252C_%253BYIYGpuuNYMnsZM%252C-nL4Hq-6NeeZMM%252C_%253BQBDI3K8o8yTVwM%252CTdDx_007psNW1M%252C_%253BcMRDDB9mnOSxSM%252CfC9lipDd7_5nhM%252C_&usg=AI4_-kSXagaxp2K5dtZPe2LBZzxC-Ipl9g&sa=X&ved=2ahUKEwioldfY9rv2AhXFQjABHc7eCAkQ9QF6BAgHEAE#imgrc=_6aSyNlplVsgXM.jpg" alt="W3Schools.com">
-<img src="https://www.google.com/search?q=ais&rlz=1CAPPDO_enGT884&sxsrf=APq-WBsefofTvyvDHa720XBAuMLAIhdvzA:1646928611448&source=lnms&tbm=isch&sa=X&ved=2ahUKEwje8uuW97v2AhU6SzABHdcbBYwQ_AUoAXoECAMQAw&biw=1366&bih=649&dpr=1#imgrc=uCulDNFpIlbvGM.jpg" alt="W3Schools.com">
-<img src="https://www.google.com/search?q=ais+campus&rlz=1CAPPDO_enGT884&sxsrf=APq-WBu7GEEgHVVc8BWm3aGKCnYH9rcUgg:1646928690375&source=lnms&tbm=isch&sa=X&ved=2ahUKEwicnL2897v2AhUaSzABHelDBO0Q_AUoAnoECAIQBA&biw=1366&bih=649&dpr=1#imgrc=g0MQUcZydWEhAM.jpg" alt="W3Schools.com">
-
+<img src="Foto 1.jpg" alt="Carmen Wirtz">
+<img src="Foto 2.jpg" alt="Con una Amiga">
+ <img src="foto3.jpg" alt="Lugar favorito del Colegio">
 </html>
