--- a/index.html
+++ b/index.html
@@ -74,4 +74,5 @@ td {background-color:red}
 <h2> ¿Quién le inspira actualmente y por qué?</h2> <p>Le inspira la juventud porque reconoce en ellos sus capacidades y ganas de salir adelante.<br> Verlos le da esperanza sobre el futuro y las posibiladades que puedan crear.<br> Está segura que con ellos al frente el futuro será brillante.</p>
 <h2> Música</h2> <p>Es tan común encontrarla escuchando música clásica como también una canción de Ozuna. <br> Le gustan una gran variedad de géneros musicales y disfruta escuchar música en vivo. <br> Cuando era pequeña aprendió a tocar el piano. Ya adulto, inició a aprender a tocar la batería y su sueño es tocar el cello.</p> 
 <img src="Foto3.jpeg" alt="Vista desde su escritorio style="width:25px;height:50px;">
+<img src="Foto 2.jpeg" alt="Foto con Ms.Silvia="width:25px;height:50px;">                                                                                    
 </html>
